# earlySN

./: .gitignore  Demo.ipynb  LICENSE  Package testing 2.ipynb  README.md  debugging.ipynb  main.tex  pyproject.toml  requirements.txt  setup.py
demo/: dhawan_hubble.csv  dhawan_salt3_params.csv  yao_bronze.txt  yao_gauss_params.csv  yao_gold.txt  yao_gold_nd.txt  yao_pl_params.csv  yao_salt3_params.csv  {}_hubble.csv
docs/: conf.py  conf.py~  index.rst
earlySN/: __init__.py  dataset.py  helper.py  lightcurve.py
earlySN/data/: dhawan_masses.csv  dhawan_params.csv  dhawan_pvs.txt  yao_masses.csv  yao_params.csv  yao_pvs.txt
package/: yao_bronze.txt  yao_gauss_params.csv  yao_gold.txt  yao_pl_params.csv
tests/: test_prime.py
