[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "earlySN"
version="0.0.1"
authors = [{name = "Christine Ye", email="cye@stanford.edu"}]
readme = {file = "README.md", content-type = "text/markdown"}
description="A package to fit lightcurves with early excesses"
dependencies = ['ztfdr @ git+ssh://git@github.com/MickaelRigault/ztfdr.git',
	        'ztfquery']
license = {text = "MIT License"}
